Changelog
=========


2.3.4 (unreleased)
------------------

- Nothing changed yet.


2.3.3 (2015-08-03)
------------------

- get_header(): Fix up RFC 2047 encoded words separated by 'CRLF LWSP'
  (which is fine according to the RFC) by replacing the CRLF with a
  SPACE so decode_header can parse them correctly.
  This works around a bug in decode_header that has been fixed in 3.3.
  See http://bugs.python.org/issue4491 and its duplicate.
  [lgraf]


2.3.2 (2015-06-30)
------------------

- Make RegEx for Apple Partial Encoding regex more specific so we don't
  accidentally remove quotes around header parts that need them.
  [lgraf]

- Added test for zip export.
  [lknoepfel]


2.3.1 (2015-03-12)
------------------

- Refactor mail view to include all HTML parts.
  [jone]


2.3.0 (2015-03-02)
------------------

- Enable referencablebehavior for mails.
  [jone]


2.2.3 (2014-10-24)
------------------

- Parse <style> tags inside the mail using the `premailer` transform.
  [phgross]

- Made mail view XSS-save using the safe-html transform for the mail-body display.
  [phgross]

- Fix an issue while generating links to image-attachments in mails.
  [deiferni]


2.2.2 (2014-08-28)
------------------

- SearchableTextExtender: For mails with incorrectly declared charset,
  try decoding them as latin1 as a last resort, ignoring all errors.
  [lgraf]

- SearchableTextExtender: Don't just decode the Content-Transfer-Encoding,
  but also decode the actual content itself with the declared charset.
  [lgraf]


2.2.1 (2014-05-30)
------------------

- Fix brown bag upgrade step from 2.2.0.
  [jone]


2.2.0 (2014-05-28)
------------------

- Performance improvements:

  - Store the title from the mail subject on the object, so that
    we don't have to read the message for retreiving the title on access.
  - Cache attachment infos on mail object.
  - Cache headers for tabbed view.

  [jone]

- Make sure only a *default* value will be set for IMailSettings.mail_domain,